--- a/index.html
+++ b/index.html
@@ -18,64 +18,65 @@
             </ul>
         </nav>
     </div>
-    <section class="home" id="ancre-presentation">
+    <header class="home" id="ancre-presentation">
+        <div class="home-background">
+            <video width="100%" autoplay muted loop>
+                <source src="assets/videos/production_id_4652096 (1080p).mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="presentation">
             <h1>Célia Ostapiak</h1>
             <p>            
                 Pour la faire courte, développeuse front-end basée au fin fond de la Bourgogne.
-                <br/>
-                <br/>
-                Et pour ceux que ça intéresse, j'ai mis plus d'infos ici.
-                Etudiante chez Openclassrooms. Ma plus grande passion dans la vie c'est d'apprendre, de comprendre le fonctionnement d'un maximum de choses. Une passion qui englobe tout un tas de centres d'intérêts divers et variés, les plus notables étant les langues et l'informatique en général.
-                Et que fais-je de toutes ces connaissances accumulées ? A part flex auprès de mon entourage ? Et bien je mets les unes au service des autres. Exemple: En ce moment j'apprends le polonais et je code. Je suis donc en train de coder un site pour apprendre le polonais (projet à venir bientôt sur mon portfolio! Portfolio qui sera un jour dispo en polonais du coup...).
             </p>
         </div>
-        <div class="home-img">
-            <img src="assets/images/floral-6548880_1280.png">
-        </div>
-    </section>
+    </header>
+    <div class="wrap-sections">
+        <section class="formation" id="ancre-formation">
+            <h2>Formation</h2>
+            <p>OpenClassrooms: Septembre 2023 - En cours...</p>
+        </section>
 
-    <section class="formation" id="ancre-formation">
-        <h2>Formation</h2>
-        <p>OpenClassrooms: Septembre 2023 - En cours...</p>
-    </section>
+        <section class="competences" id="ancre-competences">
+            <h2>Compétences</h2>
+            <ul>
+                <li>Intégrer des éléments sur une page web en utilisant les fondamentaux de HTML</li>
+                <li>Implémenter une interface responsive avec HTML et CSS (booki)</li>
+                <li>Installer un environnement de développement front-end (booki)</li>
+                <li>Intégrer du contenu conformément à une maquette avec HTML et CSS (booki)</li>
+            </ul>
+        </section>
 
-    <section class="competences" id="ancre-competences">
-        <h2>Compétences</h2>
-        <ul>
-            <li>Intégrer des éléments sur une page web en utilisant les fondamentaux de HTML</li>
-            <li>Implémenter une interface responsive avec HTML et CSS (booki)</li>
-            <li>Installer un environnement de développement front-end (booki)</li>
-            <li>Intégrer du contenu conformément à une maquette avec HTML et CSS (booki)</li>
-        </ul>
-    </section>
-
-    <section class="projects" id="ancre-projects">
-        <h2>Projets</h2>
-        <article class="card-project">
-            <div class="card-content">
-                <img class="card-img" src="assets/images/preview-ohmyfood.PNG" alt="apperçu du site OhMyFood">
-                <div class="text">
-                    <h3>OhMyFood</h3>
-                    <a class="link-project" href="https://arely5.github.io/OC-P4-OhMyFood/">Voir le projet en ligne</a>
-                </div>
+        <section class="projects" id="ancre-projects">
+            <!--Ajouter compétences pour chaque projet-->
+            <h2>Projets</h2>
+            <div class="wrap-cards">
+                <article class="card-project">
+                    <div class="card-content">
+                        <img class="card-img" src="assets/images/preview-ohmyfood.PNG" alt="apperçu du site OhMyFood">
+                        <div class="text">
+                            <h3>OhMyFood</h3>
+                            <a class="link-project" href="https://arely5.github.io/OC-P4-OhMyFood/">Voir le projet en ligne</a>
+                        </div>
+                    </div>
+                </article>
+                <article class="card-project">
+                    <div class="card-content">
+                        <img class="card-img" src="assets/images/preview-booki.PNG" alt="apperçu du site Booki">
+                        <div class="text">
+                            <h3>Booki</h3>
+                            <a class="link-project" href="https://arely5.github.io/OC-P3-Booki/">Voir le projet en ligne</a>
+                        </div>
+                    </div>
+                </article>
             </div>
-        </article>
-        <article class="card-project">
-            <div class="card-content">
-                <img class="card-img" src="assets/images/preview-booki.PNG" alt="apperçu du site Booki">
-                <div class="text">
-                    <h3>Booki</h3>
-                    <a class="link-project" href="https://arely5.github.io/OC-P3-Booki/">Voir le projet en ligne</a>
-                </div>
-            </div>
-        </article>
-    </section>
+        </section>
 
-    <footer id="ancre-contact">
-        <h2 class="contact">Contact</h2>
-        <p>Me contacter par <a href="mailto:celia.o.portfolio@gmail.com">mail</a></p>
-    </footer>
+        <footer class="contact" id="ancre-contact">
+            <h2>Contact</h2>
+            <p>Me contacter par <a href="mailto:celia.o.portfolio@gmail.com">mail</a></p>
+        </footer>
+    </div>
     
 </body>
 </html>
