css section projets + effet survol

--- a/index.html
+++ b/index.html
@@ -41,37 +41,48 @@
         </section>
 
         <section class="projects" id="ancre-projects">
-            <!--Ajouter compétences pour chaque projet-->
             <h2>Projets</h2>
             <div class="wrap-cards">
-                <article class="card-project">
-                    <div class="card-content">
-                        <img class="card-img" src="assets/images/preview-ohmyfood.PNG" alt="apperçu du site OhMyFood">
-                        <div class="text">
-                            <h3>OhMyFood</h3>
-                            <a class="link-project" href="https://arely5.github.io/OC-P4-OhMyFood/">Voir le projet en ligne</a>
-                        </div>
+                <article class="card-project first-card">
+                    <div class="card-img-wrap">
+                        <a class="link-project-img" href="https://arely5.github.io/OC-P4-OhMyFood/">
+                            <img class="card-img" src="assets/images/preview-ohmyfood.PNG" alt="apperçu du site OhMyFood">
+                        </a>
+                    </div>
+                    <div class="text">
+                        <h3>OhMyFood</h3>
+                        <p class="techno-projets">HTML, CSS, SASS</p>
+                        <h4>Compétences travaillées:</h4>
+                        <p class="compétences">
+                            <ul>
+                                <li>Intégrer une maquette en mobile-first </li>
+                                <li>Mettre en œuvre des animations CSS</li>
+                                <li>Versionner son projet avec Git et Github</li>
+                            </ul>
+                        </p>
+                        <a class="link-project" href="https://arely5.github.io/OC-P4-OhMyFood/">Voir le projet en ligne</a>
                     </div>
                 </article>
-                <article class="card-project">
-                    <div class="card-content">
-                        <img class="card-img" src="assets/images/preview-booki.PNG" alt="apperçu du site Booki">
-                        <div class="text">
-                            <h3>Booki</h3>
-                            <a class="link-project" href="https://arely5.github.io/OC-P3-Booki/">Voir le projet en ligne</a>
-                        </div>
+                <article class="card-project second-card">
+                    <div class="card-img-wrap">
+                        <a class="link-project" href="https://arely5.github.io/OC-P3-Booki/">
+                            <img class="card-img" src="assets/images/preview-booki.PNG" alt="apperçu du site Booki">
+                        </a>
+                    </div>
+                    <div class="text">
+                        <h3>Booki</h3>
+                        <p class="techno-projets">HTML, CSS</p>
+                        <h4>Compétences travaillées:</h4>
+                        <p class="compétences">
+                            <ul>
+                                <li>Implémenter une interface responsive avec HTML et CSS</li>
+                                <li>Intégrer du contenu conformément à une maquette avec HTML et CSS</li>
+                            </ul>
+                        </p>
+                        <a class="link-project" href="https://arely5.github.io/OC-P3-Booki/">Voir le projet en ligne</a>
                     </div>
                 </article>
             </div>
-            <div class="competences">
-                <h3>Compétences</h3>
-                <ul>
-                    <li>Intégrer des éléments sur une page web en utilisant les fondamentaux de HTML</li>
-                    <li>Implémenter une interface responsive avec HTML et CSS (booki)</li>
-                    <li>Installer un environnement de développement front-end (booki)</li>
-                    <li>Intégrer du contenu conformément à une maquette avec HTML et CSS (booki)</li>
-                </ul>
-            </sdiv>
         </section>
 
         <footer class="contact" id="ancre-contact">
