amélioration disposition sections

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="wrap-sections">
         <section class="formation" id="ancre-formation">
             <h2>Formation</h2>
+            <p>Autodidacte: 2022 - En cours...</p>
             <p>OpenClassrooms: Septembre 2023 - En cours...</p>
         </section>
 
