Responsive tablette mode portrait

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     </div>
     <header class="home" id="ancre-presentation">
         <div class="home-background">
-            <video width="100%" autoplay muted loop>
+            <video class="video-desktop" width="100%" autoplay muted loop>
                 <source src="assets/videos/production_id_4652096 (1080p).mp4" type="video/mp4">
             </video>
+            <video class="video-responsive" width="100%" autoplay muted loop>
+                <source src="assets/videos/pexels-marcel-gerlach-6533134 (2160p).mp4" type="video/mp4">
+            </video>            
         </div>
         <div class="presentation">
             <h1>Célia Ostapiak</h1>
@@ -51,7 +54,6 @@
                             <i class="fa-brands fa-css3-alt"></i>
                             <i class="fa-brands fa-sass"></i>
                         </div>
-                        <!--<p class="techno-projets">HTML, CSS, SASS</p>-->
                         <h4>Compétences travaillées:</h4>
                         <p class="compétences">
                             <ul>
@@ -75,7 +77,6 @@
                             <i class="fa-brands fa-html5"></i>
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                       <!--<p class="techno-projets">HTML, CSS</p>-->
                         <h4>Compétences travaillées:</h4>
                         <p class="compétences">
                             <ul>
