responsive mobile mode paysage

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </div>
     <header class="home" id="ancre-presentation">
         <div class="home-background">
-            <video class="video-desktop" width="100%" autoplay muted loop>
-                <source src="assets/videos/production_id_4652096 (1080p).mp4" type="video/mp4">
+            <video class="video-desktop" autoplay muted loop>
+                <source src="assets/videos/production_id_4652096(1080p).mp4" type="video/mp4">
             </video>
-            <video class="video-responsive" width="100%" autoplay muted loop>
-                <source src="assets/videos/pexels-marcel-gerlach-6533134 (2160p).mp4" type="video/mp4">
+            <video class="video-responsive" autoplay muted loop>
+                <source src="assets/videos/pexels-marcel-gerlach-6533134(2160p).mp4" type="video/mp4">
             </video>            
         </div>
         <div class="presentation">
@@ -54,14 +54,14 @@
                             <i class="fa-brands fa-css3-alt"></i>
                             <i class="fa-brands fa-sass"></i>
                         </div>
-                        <h4>Compétences travaillées:</h4>
-                        <p class="compétences">
+                        <div class="compétences">
+                            <h4>Compétences travaillées:</h4>
                             <ul>
                                 <li>Intégrer une maquette en mobile-first </li>
                                 <li>Mettre en œuvre des animations CSS</li>
                                 <li>Versionner son projet avec Git et Github</li>
                             </ul>
-                        </p>
+                        </div>
                         <a class="link-project" href="https://arely5.github.io/OC-P4-OhMyFood/">Voir le projet en ligne</a>
                     </div>
                 </article>
@@ -77,13 +77,13 @@
                             <i class="fa-brands fa-html5"></i>
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
-                        <h4>Compétences travaillées:</h4>
-                        <p class="compétences">
+                        <div class="compétences">
+                            <h4>Compétences travaillées:</h4>
                             <ul>
                                 <li>Implémenter une interface responsive avec HTML et CSS</li>
                                 <li>Intégrer du contenu conformément à une maquette avec HTML et CSS</li>
                             </ul>
-                        </p>
+                        </div>
                         <a class="link-project" href="https://arely5.github.io/OC-P3-Booki/">Voir le projet en ligne</a>
                     </div>
                 </article>
