new background and presentation animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="home" id="ancre-presentation">
         <div class="home-background">
             <video class="video-desktop" autoplay muted loop>
-                <source src="assets/videos/production_id_4652096(1080p).mp4" type="video/mp4">
+                <source src="assets/videos/18562307-uhd_3840_2160_30fps.mp4" type="video/mp4">
             </video>
             <video class="video-responsive" autoplay muted loop>
                 <source src="assets/videos/pexels-marcel-gerlach-6533134(2160p).mp4" type="video/mp4">
@@ -98,7 +98,7 @@
             </div>
             <div class="formation-element">
                 <i class="fa-solid fa-laptop-code"></i>
-                <p>OpenClassrooms: Septembre 2023 - En cours...</p>
+                <p>OpenClassrooms: Septembre 2023 - Juin 2024</p>
             </div>
         </section>
 
@@ -111,18 +111,6 @@
         </footer>
     </div>
 
-    <script>
-        var navbutton = document.getElementById('navbutton');
-        var navwrap = document.getElementById('navwrap');
-
-    navbutton.addEventListener('click', () => {
-    var navvisible = navwrap.style.visibility === 'visible';
-    if (navvisible) {
-        navwrap.style.visibility = 'hidden';
-    } else {
-        navwrap.style.visibility = 'visible';
-    }
-});
-    </script>
+    <script src="animations.js"></script>
 </body>
 </html>
