Link to github + translation update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Célia Ostapiak</title>
 </head>
 <body>
-    <div id="language-btn" onclick="toggleLanguage()">EN</div>
+    <div id="language-btn">EN</div>
     <div id="navbutton" class="nav-button">
         <img id="icon-nav" src="assets/icons/bars-solid.svg">
     </div>
@@ -105,7 +105,10 @@
         <footer class="contact" id="ancre-contact">
             <h2>Contact</h2>
             <div class="contact-content">
-                <p id="contact-text">Me contacter par </p><a href="mailto:celia.o.portfolio@gmail.com">e-mail</a>
+                <ul>
+                    <li><a href="mailto:celia.o.portfolio@gmail.com">E-mail</a></li>
+                    <li><a href="https://github.com/Arely5"><p id="github-text">Github<img id="github-icon" src="assets/icons/github.svg"></p></a></li>
+                </ul>
             </div>
         </footer>
     </div>
