added projects + responsive details Sophie Bluel

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <source src="assets/videos/18562307-uhd_3840_2160_30fps.mp4" type="video/mp4">
             </video>
             <video class="video-responsive" autoplay muted loop>
-                <source src="assets/videos/pexels-marcel-gerlach-6533134(2160p).mp4" type="video/mp4">
+                <source src="assets/videos/Snapchat-1414802599_1.mp4" type="video/mp4">
             </video>            
         </div>
         <div class="presentation">
@@ -50,11 +50,6 @@
                     </div>
                     <div class="text">
                         <h3>OhMyFood</h3>
-                        <div class="techno-projets">
-                            <i class="fa-brands fa-html5"></i>
-                            <i class="fa-brands fa-css3-alt"></i>
-                            <i class="fa-brands fa-sass"></i>
-                        </div>
                         <div class="compétences">
                             <h4 class="skills-title">Compétences travaillées:</h4>
                             <ul>
@@ -74,10 +69,6 @@
                     </div>
                     <div class="text">
                         <h3>Booki</h3>
-                        <div class="techno-projets">
-                            <i class="fa-brands fa-html5"></i>
-                            <i class="fa-brands fa-css3-alt"></i>
-                        </div>
                         <div class="compétences">
                             <h4 class="skills-title">Compétences travaillées:</h4>
                             <ul>
@@ -86,6 +77,42 @@
                             </ul>
                         </div>
                         <a class="link-project-translation" href="https://arely5.github.io/OC-P3-Booki/">Voir le projet en ligne</a>
+                    </div>
+                </article>
+                <article class="card-project first-card">
+                    <div class="card-img-wrap">
+                        <a class="link-project" href="https://arely5.github.io/OC-P5-PrintIt/">
+                            <img class="card-img" src="assets/images/preview-printit.PNG" alt="apperçu du site PrintIt">
+                        </a>
+                    </div>
+                    <div class="text">
+                        <h3>Print it!</h3>
+                        <div class="compétences">
+                            <h4 class="skills-title">Compétences travaillées:</h4>
+                            <ul>
+                                <li id="basic-js-skills">Créer un carrousel interactif avec JavaScript</li>
+                            </ul>
+                        </div>
+                        <a class="link-project-translation" href="https://arely5.github.io/OC-P5-PrintIt/">Voir le projet en ligne</a>
+                    </div>
+                </article>
+                <article class="card-project second-card">
+                    <div class="card-img-wrap">
+                        <a class="link-project" href="/details-sophie-blue.html">
+                            <img class="card-img" src="assets/images/sophie-bluel/prewiew-p6.PNG" alt="apperçu du portfolio de Sophie Bluel">
+                        </a>
+                    </div>
+                    <div class="text">
+                        <h3>Sophie Bluel - Architecte d'intérieur</h3>
+                        <div class="compétences">
+                            <h4 class="skills-title">Compétences travaillées:</h4>
+                            <ul>
+                                <li id="DOM-js-skills">Manipuler les éléments du DOM avec JavaScript</li>
+                                <li id="data-js-skills">Récupérer les données utilisateurs dans le JavaScript via des formulaires</li>
+                                <li id="data-js-skills">Communiquer avec des API</li>
+                            </ul>
+                        </div>
+                        <a class="details-project-translation" href="/details-sophie-blue.html">Voir les détails du projet</a>
                     </div>
                 </article>
             </div>
