--- a/details-sophie-blue.html
+++ b/details-sophie-blue.html
@@ -43,7 +43,7 @@
     <div id="wrap-second-page" class="wrap-sections">
         <section class="description" id="ancre-description">
             <h2 class="titles-page-sb" id="title-description-section">Description</h2>
-            <p class="description-text">Ma mission lors de ce projet était de créer une page web dynamaique pour présenter le travail de l'architecte d'intérieur Sophie Bluel. Pour cela je devais utiliser JavaScript, Node.js et communiquer avec une API.</p>
+            <p class="description-text">Ma mission lors de ce projet était de créer une page web dynamique pour présenter le travail de l'architecte d'intérieur Sophie Bluel. Pour cela je devais utiliser JavaScript, Node.js et communiquer avec une API.</p>
         </section>
         <section class="images" id="ancre-images">
             <h2 class="titles-page-sb" id="title-images-section">Images</h2>
@@ -62,7 +62,7 @@
                             <img src="assets/images/sophie-bluel/projets-2.PNG">
                         </a>
                     </div>
-                    <figcaption>Possibilité de filtrer les travaux par types</figcaption>
+                    <figcaption>Possibilité de filtrer les travaux par type</figcaption>
                 </article>
                 <article>
                     <div class="img-wrap-articles">
@@ -102,7 +102,7 @@
                             <img src="assets/images/sophie-bluel/edition-mode-4.PNG">
                         </a>
                     </div>
-                    <figcaption>Elément ajouté avec succès!</figcaption>
+                    <figcaption>Élément ajouté avec succès!</figcaption>
                 </article>
             </div>
         </section>
