updating path to second page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </article>
                 <article class="card-project second-card">
                     <div class="card-img-wrap">
-                        <a class="link-project" href="/details-sophie-blue.html">
+                        <a class="link-project" href="../portfolio/details-sophie-blue.html">
                             <img class="card-img" src="assets/images/sophie-bluel/prewiew-p6.PNG" alt="apperçu du portfolio de Sophie Bluel">
                         </a>
                     </div>
@@ -112,7 +112,7 @@
                                 <li id="data-js-skills">Communiquer avec des API</li>
                             </ul>
                         </div>
-                        <a class="details-project-translation" href="/details-sophie-blue.html">Voir les détails du projet</a>
+                        <a class="details-project-translation" href="../portfolio/details-sophie-blue.html">Voir les détails du projet</a>
                     </div>
                 </article>
             </div>
