updated path back home 2

--- a/details-sophie-blue.html
+++ b/details-sophie-blue.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="back-home">
-        <a id="back-home-link" href="index.html">
+        <a id="back-home-link" href="/index.html">
             <img id="arrow-left" src="assets/icons/arrow-left-solid.svg">
             <p id="home-page">Page d'accueil</p>
         </a>
