Link to twitter X

--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
             <h2>Contact</h2>
             <div class="contact-content">
                 <ul>
-                    <li><a href="mailto:celia.o.portfolio@gmail.com">E-mail</a></li>
-                    <li><a href="https://github.com/Arely5"><p id="github-text">Github<img id="github-icon" src="assets/icons/github.svg"></p></a></li>
+                    <li><a href="mailto:celia.o.portfolio@gmail.com"><p>E-mail<img id="mail-icon" src="assets/icons/envelope-regular.svg"></p></a></li>
+                    <li><a href="https://github.com/Arely5"><p>Github<img id="github-icon" src="assets/icons/github.svg"></p></a></li>
+                    <li><a href="https://x.com/o_o165851"><p>X (Twitter)<img id="x-icon" src="assets/icons/x-twitter.svg"></p></a></li>
                 </ul>
             </div>
         </footer>
